faceted-search/webapp/styles/App.less
@import (less) "../lib/kendo-ui/styles/kendo.common.css";
@import (less) "../lib/kendo-ui/styles/kendo.default.css";
@import (less) "../lib/wingspan-forms/wingspan-forms.css";

body {
  overflow: auto;
}

.App {
  padding: 10px;

  > .table {
    display: table;

    > .left {
      display: table-cell;
      width: 20%;
      padding: 10px;
      > div {
        height: 400px;
        overflow-y: auto;
      }
    }

    > .right {
      display: table-cell;
      padding: 10px;
      vertical-align: top;
    }
  }

  .filterControls {
    border: solid 1px #eee;
    background: #f8f8f8;
    padding: 9px 10px;
    margin-top: 15px;
    position: relative;
    border-radius: 6px;

    .filters {
      color: #2c5985;
      text-transform: uppercase;
      > span {
        padding-right: 5px;
      }
    }

    .hint {
      color: #999;
      font-style: italic;
    }
  }

  .left {
    font-size: 14px;


    .formLabel {
      font-weight: bold;
    }

    .formElement label {
      line-height: 25px;
    }

    .CheckBox {
      padding-right: 5px;
    }

    .count {
      color: #999;
    }
  }
}

